--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 	<script src="vendor/three.min.js"></script>
 	<script src="vendor/OBJLoader.js"></script>
+	<script src="vendor/ColladaLoader.js"></script>
 	<script src="vendor/TrackballControls.js"></script>
 	<script src="src/main.js"></script>
 	<script>
@@ -26,8 +27,8 @@
 
 		var controls = new THREE.TrackballControls( camera );
 		
-		var cube = main.gl.makeCube(),
-			ground = main.gl.makeGround();
+		var cube = main.gl.makeCube();//,
+			//ground = main.gl.makeGround();
 
 		controls.panSpeed = 3.8;
 		controls.noRoll = true;
@@ -39,12 +40,12 @@
 		cube.rotation.y = 0;//0.5;
 		cube.position.z = -2
 		scene.add(cube);
-		scene.add(ground);
+		//scene.add(ground);
 
-		var ambient = new THREE.AmbientLight( 0x777777 );
+		var ambient = new THREE.AmbientLight( 0x666666 );
 		scene.add(ambient);
-		var directionalLight = new THREE.DirectionalLight( 0x9999ff );
-		directionalLight.position.set( 0, 0, 1 );
+		var directionalLight = new THREE.DirectionalLight( 0x666666 );
+		directionalLight.position.set(0, 1000, 500);
 		scene.add(directionalLight);
 
 		var manager = new THREE.LoadingManager();
@@ -57,6 +58,31 @@
 		imgLoader.load("textures/UV_Grid_Sm.jpg", function (image) {
 			texture.image = image;
 			texture.needsUpdate = true;
+		});
+
+		var cloader = new THREE.ColladaLoader();
+		cloader.options.convertUpAxis = true;
+		cloader.load( 'obj/lolz.dae', function ( collada ) {
+
+			var dae = collada.scene;
+
+			dae.traverse( function ( child ) {
+				console.log("ch", child);
+				if ( child instanceof THREE.Mesh ) {
+					//child.material.map = texture;
+					//var animation = new THREE.Animation( child, child.geometry.animation );
+					var scale = 18;
+					child.scale.set(scale, scale, scale);
+					//animation.play();
+					scene.add(child);
+				}
+
+			//dae.updateMatrix();
+
+			//scene.add(dae);
+
+			} );
+
 		});
 
 		var objLoader = new THREE.JSONLoader(manager),
