--- a/index.html
+++ b/index.html
@@ -118,12 +118,14 @@
 				//person.rotation.x += 0.01;
 				//person.position.x += 0.01;
 				//person.position.z += 0.01;
-				person.translateZ(0.05);
+
+				if (targetPoint) {
+					person.translateZ(0.05);
+					if (person.position.distanceToSquared(targetPoint) < 1) {
+						targetPoint = null;
+					}
+				}
 				getIntercectPoint(person, groundMesh);
-			}
-
-			if (targetPoint) {
-
 			}
 
 			if (animation) animation.update(0.06);
@@ -179,7 +181,7 @@
 				//person.lookAt(intersects[0].face.normal);
 				// // person.rotation.y -= Math.PI / 2;
 				//person.position.copy(intersects[0].point);
-				targetPoint.copy(intersects[0].point);
+				targetPoint = intersects[0].point;
 				person.lookAt(targetPoint);
 			}
 
