--- a/index.html
+++ b/index.html
@@ -63,19 +63,20 @@
 		main.loaders.collada.options.convertUpAxis = true;
 		main.loaders.collada.load( 'obj/lolz.dae', function (collada) {
 			var dae = collada.scene;
-			console.log("Collada load:", dae)
-			dae.scale.set(160,160,160);
 			var i = -1;
 			dae.traverse(function (child) {
 				console.log(++i + "!", child.id, child);
 				if (child instanceof THREE.Mesh) {
+					if (!groundMesh) {
+						groundMesh = child;
 					//child.material.map = texture;
 					//var scale = 52;
-					var scale = 1;//
-					//child.scale.set(scale, scale, scale);
+					var scale = 10;//
+					child.scale.set(scale, scale, scale);
 					scene.add(child);	
 					console.log("oarent pos:", child)
-					if (!groundMesh) groundMesh = child;
+					}
+					
 				}
 			} );
 
